--- a/Matrix.WEB/Views/Home/Index.cshtml
+++ b/Matrix.WEB/Views/Home/Index.cshtml
@@ -1,31 +1,16 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Matrix";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+    <input type="file" id="downloadFileInput" accept=".csv"/>
+    <button id="downloadFile" title="Загрузить матрицу из файла .csv"><i class="fas fa-download fa-2x"></i></button>
+    <button id="uploadMatrix" title="Экспортировать матрицу в файл .csv"><i class="fas fa-upload fa-2x"></i></button>
+    <button id="randomMatrix" title="Сгенерировать рандомную матрицу"><i class="fas fa-random fa-2x"></i></button>
+    <button id="rotateMatrix" title="Повернуть матрицу на 90 градусов"><i class="fas fa-retweet fa-2x fa-spin"></i></button>
 </div>
+<div class="row" id="matrix">
+</div>
+@section Scripts {
+    @Scripts.Render("~/bundles/matrix")
+}
